[Agentic] Agentic RAG with CFP demo